--- a/force-app/main/default/pages/DownloadPDFController.page
+++ b/force-app/main/default/pages/DownloadPDFController.page
@@ -187,6 +187,14 @@
                         downloadLink.download = 'Service_Appointments.zip';
                         downloadLink.href = URL.createObjectURL(blob);
                         downloadLink.click();
+
+                        const selectedAppointmentsArray = '{!selectedAppointments}'
+                        .slice(1, -1)  // Remove the surrounding square brackets
+                        .split(',')
+                        .map(id => id.trim());
+
+                        invokeApexMethodSync('{!$RemoteAction.DownloadPDFController.updateDateTimeField}', JSON.stringify(selectedAppointmentsArray));
+                        
                     }).then(function (result) {
                         loadingScreen.style.display = 'none';
                     });
@@ -213,5 +221,20 @@
                 );
             });
         }
+
+        function invokeApexMethodSync(methodName, ...params) {
+            Visualforce.remoting.Manager.invokeAction(
+                methodName,
+                ...params,
+                (result, event) => {
+                    if (event.status) {
+                        console.log('Remote action was successful:', result);
+                    } else {
+                        console.error('Remote action failed:', event.message);
+                    }
+                },
+                { escape: true }
+            );
+        }      
     </script>
 </apex:page>
