--- a/force-app/main/default/pages/DownloadPDFController.page
+++ b/force-app/main/default/pages/DownloadPDFController.page
@@ -47,7 +47,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background: rgba(255, 255, 255, 0.7);
+                background: rgba(255, 255, 255, 0.9);
                 z-index: 999;
                 text-align: center;
             }
@@ -72,6 +72,36 @@
             @keyframes spin {
                 0% { transform: rotate(0deg); }
                 100% { transform: rotate(360deg); }
+            }
+
+            .overlay {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(255, 255, 255, 0.9);
+                z-index: 999;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .overlay .checkmark, .overlay .loading-text {
+                font-weight: bold;
+                margin: 10px;
+            }
+
+            .checkmark {
+                font-size: 3em;
+                /* Add any other styling for the checkmark here */
+            }
+
+            .success-text {
+                font-size: 1.5em;
+                /* Add any other styling for the success text here */
+                font-weight: bold;
+                margin: 10px;
             }
         </style>
         <div class="container">
@@ -107,9 +137,13 @@
             <div class="download-button">
                 <apex:commandButton value="Download PDFs" onclick="callDownloadFunction();" reRender="none"/>
             </div>
-            <div id="loading-screen" class="loading-screen">
+            <div id="loading-screen" class="loading-screen" >
                 <div class="loading-spinner"></div>
                 <div class="loading-text">Downloading...</div>
+            </div>
+            <div id="success-message" style="display: none;" class="overlay">
+                <div class="checkmark">&#10004;</div>
+                <div class="success-text">Success</div>
             </div>
         </div>
     </apex:form>
@@ -154,6 +188,8 @@
         async function callDownloadFunction() {
             try {
                 const loadingScreen = document.querySelector('#loading-screen');
+                const successMessage = document.querySelector('#success-message');
+
                 loadingScreen.style.display = 'flex';
                 
                 const idsString = '{!paramId}';
@@ -199,7 +235,17 @@
                         invokeApexMethodSync('{!$RemoteAction.DownloadPDFController.addLinkAndTimestamp}', JSON.stringify(selectedAppointmentsArray));
                         
                     }).then(function (result) {
-                        loadingScreen.style.display = 'none';
+                        setTimeout(function () {
+                            loadingScreen.style.display = 'none';
+
+                            const successMessage = document.getElementById('success-message');
+
+                            successMessage.style.display = 'flex';
+
+                            setTimeout(function () {
+                                successMessage.style.display = 'none';
+                            }, 2000); // Display the success message for 2 seconds (2000 milliseconds)
+                        }, 500); // Delay for 0.5 seconds (500 milliseconds)
                     });
 
             } catch (error) {
